[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
tensorflow = "1.14.*"
opencv-python = "4.2.0.34"
paho-mqtt = "^1.5.0"
logzero = "^1.5.0"
astor = "^0.8.1"
PyOpenGL = "^3.1.5"
six = "^1.15.0"
grpcio = "^1.31.0"
keras-applications = "^1.0.8"
keras-preprocessing = "^1.1.2"
protobuf = "^3.12.4"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
safety = "^1.8.7"
bandit = "^1.6.2"
isort = "^4.3.21"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

